[package]
name = "list_to_tree"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["list", "tree", "json"]
categories = ["web-programming", "encoding"]
description = "Transform a list to json tree for fontend"
documentation = "https://docs.rs/list_to_tree"
readme = "README.md"
homepage = "https://list_to_tree.rs/"
repository = "https://github.com/rust-lang/cargo/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"